--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       name="viewport"
       content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>Vite + Vue + TS</title>
+    <title>Vite测试</title>
   </head>
   <body>
     <div id="app"></div>
